# opencv-test

./: CMakeLists.txt  Readme.md  how_to_scan_images.cpp  yolo_object_detection.cpp
